<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_pregunta"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_verdadero"
        android:text="@string/verdadero_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_falso"
        android:text="@string/falso_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </LinearLayout>


   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
    <Button
        android:id="@+id/btn_atras"
        android:text="@string/atras_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_arrow_left_black_24"/>


    <Button
        android:id="@+id/btn_siguiente"
        android:text="@string/siguiente_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/baseline_arrow_right_black_24"/>
   </LinearLayout>

</LinearLayout>